Fix bug with request headers, add more tests